add 4 new translations (zh)

--- a/stories/index.html
+++ b/stories/index.html
@@ -469,6 +469,13 @@
       <td><a name="zh0053"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0057</td>
+      <td>萨内在商店</td>
+      <td style="text-align: center"><a href="/stories/zh/0057_萨内在商店_slides.html" target="_blank">Slideshow</a> · <a href="/stories/zh/0057_萨内在商店.html">Plain HTML</a></td>
+      <td><a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="GitHub release" title="GitHub release" /></a> · <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="Dropbox" title="Dropbox" /></a> · <a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Google Drive" /></a></td>
+      <td><a name="zh0057"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0064</td>
       <td>乔伊上学</td>
       <td style="text-align: center"><a href="/stories/zh/0064_乔伊上学_slides.html" target="_blank">Slideshow</a> · <a href="/stories/zh/0064_乔伊上学.html">Plain HTML</a></td>
@@ -532,6 +539,13 @@
       <td><a name="zh0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0098</td>
+      <td>一头奶牛是我的朋友</td>
+      <td style="text-align: center"><a href="/stories/zh/0098_一头奶牛是我的朋友_slides.html" target="_blank">Slideshow</a> · <a href="/stories/zh/0098_一头奶牛是我的朋友.html">Plain HTML</a></td>
+      <td><a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="GitHub release" title="GitHub release" /></a> · <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="Dropbox" title="Dropbox" /></a> · <a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Google Drive" /></a></td>
+      <td><a name="zh0098"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0112</td>
       <td>我的身体</td>
       <td style="text-align: center"><a href="/stories/zh/0112_我的身体_slides.html" target="_blank">Slideshow</a> · <a href="/stories/zh/0112_我的身体.html">Plain HTML</a></td>
@@ -593,6 +607,13 @@
       <td style="text-align: center"><a href="/stories/zh/0147_我和我的家人_slides.html" target="_blank">Slideshow</a> · <a href="/stories/zh/0147_我和我的家人.html">Plain HTML</a></td>
       <td><a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="GitHub release" title="GitHub release" /></a> · <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="Dropbox" title="Dropbox" /></a> · <a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Google Drive" /></a></td>
       <td><a name="zh0147"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0151</td>
+      <td>天气</td>
+      <td style="text-align: center"><a href="/stories/zh/0151_天气_slides.html" target="_blank">Slideshow</a> · <a href="/stories/zh/0151_天气.html">Plain HTML</a></td>
+      <td><a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="GitHub release" title="GitHub release" /></a> · <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="Dropbox" title="Dropbox" /></a> · <a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Google Drive" /></a></td>
+      <td><a name="zh0151"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0156</td>
@@ -726,6 +747,13 @@
       <td style="text-align: center"><a href="/stories/zh/0331_雨_slides.html" target="_blank">Slideshow</a> · <a href="/stories/zh/0331_雨.html">Plain HTML</a></td>
       <td><a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="GitHub release" title="GitHub release" /></a> · <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="Dropbox" title="Dropbox" /></a> · <a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Google Drive" /></a></td>
       <td><a name="zh0331"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0359</td>
+      <td>我的狗狗</td>
+      <td style="text-align: center"><a href="/stories/zh/0359_我的狗狗_slides.html" target="_blank">Slideshow</a> · <a href="/stories/zh/0359_我的狗狗.html">Plain HTML</a></td>
+      <td><a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="GitHub release" title="GitHub release" /></a> · <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="Dropbox" title="Dropbox" /></a> · <a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Google Drive" /></a></td>
+      <td><a name="zh0359"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0360</td>
@@ -1907,6 +1935,12 @@
       <td><a href="#yue0053">yue</a>, <a href="#zh0053">zh</a></td>
     </tr>
     <tr>
+      <td>0057</td>
+      <td><a href="http://my.africanstorybook.org/stories/sane-market">Sane in the market</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#zh0057">zh</a></td>
+    </tr>
+    <tr>
       <td>0064</td>
       <td><a href="http://my.africanstorybook.org/stories/joy-goes-school">Joy goes to school</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
@@ -1967,6 +2001,12 @@
       <td><a href="#hi0095">hi</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#zh0095">zh</a></td>
     </tr>
     <tr>
+      <td>0098</td>
+      <td><a href="http://my.africanstorybook.org/stories/cow-my-friend">A cow is my friend</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#zh0098">zh</a></td>
+    </tr>
+    <tr>
       <td>0112</td>
       <td><a href="http://my.africanstorybook.org/stories/my-body">My body</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
@@ -2025,6 +2065,12 @@
       <td><a href="http://my.africanstorybook.org/stories/my-family-and-i">My family and I</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#zh0147">zh</a></td>
+    </tr>
+    <tr>
+      <td>0151</td>
+      <td><a href="http://my.africanstorybook.org/stories/weather-0">Weather</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#zh0151">zh</a></td>
     </tr>
     <tr>
       <td>0156</td>
@@ -2175,6 +2221,12 @@
       <td><a href="http://my.africanstorybook.org/stories/children-wax">Children of wax</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#nn0337">nn</a>, <a href="#no0337">no</a></td>
+    </tr>
+    <tr>
+      <td>0359</td>
+      <td><a href="http://my.africanstorybook.org/stories/my-dog-0">My dog</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#zh0359">zh</a></td>
     </tr>
     <tr>
       <td>0360</td>
