--- a/stories/index.html
+++ b/stories/index.html
@@ -1377,6 +1377,13 @@
       <td><a href="https://github.com/global-asp/global-asp/releases/download/v1.1/no.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="GitHub release" title="GitHub release" /></a> · <a href="https://www.dropbox.com/s/ona8gaetcci9m5f/no.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="Dropbox" title="Dropbox" /></a> · <a href="https://drive.google.com/open?id=0B59ZADK9EsbsVmtZTlhSZlhpQkU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Google Drive" /></a></td>
       <td><a name="no0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
+    <tr>
+      <td>0360</td>
+      <td>Å telle katter</td>
+      <td style="text-align: center"><a href="/stories/no/0360_å-telle-katter_slides.html" target="_blank">Slideshow</a> · <a href="/stories/no/0360_å-telle-katter.html">Plain HTML</a></td>
+      <td><a href="https://github.com/global-asp/global-asp/releases/download/v1.1/no.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="GitHub release" title="GitHub release" /></a> · <a href="https://www.dropbox.com/s/ona8gaetcci9m5f/no.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="Dropbox" title="Dropbox" /></a> · <a href="https://drive.google.com/open?id=0B59ZADK9EsbsVmtZTlhSZlhpQkU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Google Drive" /></a></td>
+      <td><a name="no0360"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
   </tbody>
 </table>
 
@@ -2232,7 +2239,7 @@
       <td>0360</td>
       <td><a href="http://my.africanstorybook.org/stories/counting-cats">Counting cats</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/4.0/">CC-BY-NC</a></td>
-      <td><a href="#hi0360">hi</a>, <a href="#zh0360">zh</a></td>
+      <td><a href="#hi0360">hi</a>, <a href="#no0360">no</a>, <a href="#zh0360">zh</a></td>
     </tr>
   </tbody>
 </table>
