--- a/stories/index.html
+++ b/stories/index.html
@@ -85,6 +85,8 @@
 
 <li class="toc"><a href="#hindi">Hindi [हिन्दी]</a></li><br>
 
+<li class="toc"><a href="#italian">Italian [Italiano]</a></li><br>
+
 <li class="toc"><a href="#jamaican-creole">Jamaican Creole [Patwa]</a></li><br>
 
 <li class="toc"><a href="#japanese">Japanese [日本語]</a></li><br>
@@ -1072,6 +1074,29 @@
       <td style="text-align: center"><a href="/stories/hi/0360_बिल्लीयो-की-गिनती-करना_slides.html" target="_blank">Slideshow</a> · <a href="/stories/hi/0360_बिल्लीयो-की-गिनती-करना.html">Plain HTML</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="GitHub release" title="GitHub release" /></a> · <a href="https://www.dropbox.com/s/bnz8xajkn1v2hhh/hi.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="Dropbox" title="Dropbox" /></a> · <a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Google Drive" /></a></td>
       <td><a name="hi0360"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
+  <h3><a name='italian'>Italian [Italiano]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Story title</th>
+      <th style="text-align: center">View</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0253</td>
+      <td>Mio libbro di immagini</td>
+      <td style="text-align: center"><a href="/stories/it/0253_mio-libbro-di-immagini_slides.html" target="_blank">Slideshow</a> · <a href="/stories/it/0253_mio-libbro-di-immagini.html">Plain HTML</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="GitHub release" title="GitHub release" /></a> · <a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="Dropbox" title="Dropbox" /></a> · <a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Google Drive" /></a></td>
+      <td><a name="it0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -2161,7 +2186,7 @@
       <td>0253</td>
       <td><a href="http://my.africanstorybook.org/stories/my-picture-book-0">My Picture Book</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#aeb0253">aeb</a>, <a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#gu0253">gu</a>, <a href="#hi0253">hi</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#ms0253">ms</a>, <a href="#nn0253">nn</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#tl0253">tl</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
+      <td><a href="#aeb0253">aeb</a>, <a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#gu0253">gu</a>, <a href="#hi0253">hi</a>, <a href="#it0253">it</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#ms0253">ms</a>, <a href="#nn0253">nn</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#tl0253">tl</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
     </tr>
     <tr>
       <td>0264</td>
