--- a/stories/index.html
+++ b/stories/index.html
@@ -625,6 +625,13 @@
       <td><a name="zh0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0172</td>
+      <td>水果</td>
+      <td style="text-align: center"><a href="/stories/zh/0172_水果_slides.html" target="_blank">Slideshow</a> · <a href="/stories/zh/0172_水果.html">Plain HTML</a></td>
+      <td><a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="GitHub release" title="GitHub release" /></a> · <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="Dropbox" title="Dropbox" /></a> · <a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Google Drive" /></a></td>
+      <td><a name="zh0172"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0176</td>
       <td>听着</td>
       <td style="text-align: center"><a href="/stories/zh/0176_听着_slides.html" target="_blank">Slideshow</a> · <a href="/stories/zh/0176_听着.html">Plain HTML</a></td>
@@ -644,6 +651,13 @@
       <td style="text-align: center"><a href="/stories/zh/0199_这个我会_slides.html" target="_blank">Slideshow</a> · <a href="/stories/zh/0199_这个我会.html">Plain HTML</a></td>
       <td><a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="GitHub release" title="GitHub release" /></a> · <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="Dropbox" title="Dropbox" /></a> · <a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Google Drive" /></a></td>
       <td><a name="zh0199"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0203</td>
+      <td>一只苍蝇</td>
+      <td style="text-align: center"><a href="/stories/zh/0203_一只苍蝇_slides.html" target="_blank">Slideshow</a> · <a href="/stories/zh/0203_一只苍蝇.html">Plain HTML</a></td>
+      <td><a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="GitHub release" title="GitHub release" /></a> · <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="Dropbox" title="Dropbox" /></a> · <a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Google Drive" /></a></td>
+      <td><a name="zh0203"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0206</td>
@@ -735,6 +749,13 @@
       <td style="text-align: center"><a href="/stories/zh/0309_大和小_slides.html" target="_blank">Slideshow</a> · <a href="/stories/zh/0309_大和小.html">Plain HTML</a></td>
       <td><a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="GitHub release" title="GitHub release" /></a> · <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="Dropbox" title="Dropbox" /></a> · <a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Google Drive" /></a></td>
       <td><a name="zh0309"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0313</td>
+      <td>棕色</td>
+      <td style="text-align: center"><a href="/stories/zh/0313_棕色_slides.html" target="_blank">Slideshow</a> · <a href="/stories/zh/0313_棕色.html">Plain HTML</a></td>
+      <td><a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="GitHub release" title="GitHub release" /></a> · <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="Dropbox" title="Dropbox" /></a> · <a href="https://drive.google.com/open?id=0B59ZADK9EsbsbXhPZVI0QlpqUGs"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Google Drive" /></a></td>
+      <td><a name="zh0313"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0320</td>
@@ -1896,7 +1917,7 @@
   <tbody>
     <tr>
       <td>0001</td>
-      <td><a href="http://my.africanstorybook.org/stories/very-tall-man-1">A very tall man</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/very-tall-man">A very tall man</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#da0001">da</a>, <a href="#eo0001">eo</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#sv0001">sv</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
     </tr>
@@ -2111,6 +2132,12 @@
       <td><a href="#nn0156">nn</a>, <a href="#no0156">no</a>, <a href="#sv0156">sv</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
     </tr>
     <tr>
+      <td>0172</td>
+      <td><a href="http://my.africanstorybook.org/stories/fruits">Fruits</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#zh0172">zh</a></td>
+    </tr>
+    <tr>
       <td>0176</td>
       <td><a href="http://my.africanstorybook.org/stories/listen">Listen</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
@@ -2127,6 +2154,12 @@
       <td><a href="http://my.africanstorybook.org/stories/apedori-%C9%9B%C9%94ng-aswam-n%CA%89-i-can-do">Apedori ɛɔng aswam nʉ / I can do this</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#yue0199">yue</a>, <a href="#zh0199">zh</a></td>
+    </tr>
+    <tr>
+      <td>0203</td>
+      <td><a href="http://my.africanstorybook.org/stories/fly">A fly</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#zh0203">zh</a></td>
     </tr>
     <tr>
       <td>0204</td>
@@ -2229,6 +2262,12 @@
       <td><a href="http://my.africanstorybook.org/stories/little-and-big">Little and big</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#aeb0309">aeb</a>, <a href="#fa0309">fa</a>, <a href="#yue0309">yue</a>, <a href="#zh0309">zh</a></td>
+    </tr>
+    <tr>
+      <td>0313</td>
+      <td><a href="http://my.africanstorybook.org/stories/brown">Brown</a></td>
+      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="#zh0313">zh</a></td>
     </tr>
     <tr>
       <td>0320</td>
