--- a/stories/zh/0172_水果_slides.html
+++ b/stories/zh/0172_水果_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="en-mycket-lång-man" class="slide level1">
-<h1>En mycket lång man</h1>
+<section id="水果" class="slide level1">
+<h1>水果</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0172/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
-<p>Hans hacka var för kort.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0172/02.jpg" /></p>
+<p>水果，水果，水果</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
-<p>Hans dörröppning var för låg.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0172/03.jpg" /></p>
+<p>水果吃起来甜甜的</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
-<p>Hans säng var för kort.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0172/04.jpg" /></p>
+<p>人们吃不同种类的水果</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
-<p>Hans cykel var för kort.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0172/05.jpg" /></p>
+<p>一个可能吃芒果，另一个可能吃菠萝</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
-<p>Den här mannen var för lång!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0172/06.jpg" /></p>
+<p>我们也享受吃橙子</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
-<p>Han gjorde ett mycket långt skaft till sin hacka.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0172/07.jpg" /></p>
+<p>孩子们享受苹果</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
-<p>Han gjorde en mycket hög dörrkarm.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0172/08.jpg" /></p>
+<p>鸟儿们享受玉米</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
-<p>Han gjorde en mycket lång säng.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0172/09.jpg" /></p>
+<p>水果对健康有益。人们，动物和鸟儿们都如此喜爱水果</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,39 +168,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
-<p>Han köpte en mycket hög cykel.</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
-<p>Han satt på en mycket hög stol. Han åt med en mycket lång gaffel.</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
-<p>Han lämnade sitt hus och bodde i en stor skog. Han levde i många år.</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="en-mycket-lång-man-1">En mycket lång man</h2>
-<strong>Text:</strong> Cornelius Gulere<br> <strong>Illustrationer:</strong> Catherine Groenewald<br> <strong>Översättning:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> svenska<br>
+<h2 id="水果-1">水果</h2>
+<strong>作者:</strong> Ritah Katetemera<br> <strong>绘画:</strong> Wiehan de Jager, Catherine Groenewald<br> <strong>翻译:</strong> Xingxing (Winny) Wang<br> <strong>语言:</strong> 中文<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/very-tall-man'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/fruits'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
