--- a/stories/zh/0203_一只苍蝇_slides.html
+++ b/stories/zh/0203_一只苍蝇_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="en-mycket-lång-man" class="slide level1">
-<h1>En mycket lång man</h1>
+<section id="一只苍蝇" class="slide level1">
+<h1>一只苍蝇</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0203/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
-<p>Hans hacka var för kort.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0203/02.jpg" /></p>
+<p>苍蝇是一种昆虫</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
-<p>Hans dörröppning var för låg.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0203/03.jpg" /></p>
+<p>苍蝇生活在脏的地方</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
-<p>Hans säng var för kort.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0203/04.jpg" /></p>
+<p>在马桶，垃圾坑和食物上</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
-<p>Hans cykel var för kort.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0203/05.jpg" /></p>
+<p>它从脏的地方飞到我们的家</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
-<p>Den här mannen var för lång!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0203/06.jpg" /></p>
+<p>它落在我们的食物上，弄脏食物。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
-<p>Han gjorde ett mycket långt skaft till sin hacka.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0203/07.jpg" /></p>
+<p>当一个人吃脏的食物，他会胃疼。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
-<p>Han gjorde en mycket hög dörrkarm.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0203/08.jpg" /></p>
+<p>一只苍蝇是非常危险的</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,48 +159,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
-<p>Han gjorde en mycket lång säng.</p>
-<center>
-<strong>8</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
-<p>Han köpte en mycket hög cykel.</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
-<p>Han satt på en mycket hög stol. Han åt med en mycket lång gaffel.</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
-<p>Han lämnade sitt hus och bodde i en stor skog. Han levde i många år.</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="en-mycket-lång-man-1">En mycket lång man</h2>
-<strong>Text:</strong> Cornelius Gulere<br> <strong>Illustrationer:</strong> Catherine Groenewald<br> <strong>Översättning:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> svenska<br>
+<h2 id="一只苍蝇-1">一只苍蝇</h2>
+<strong>作者:</strong> Kabubbu pilot site<br> <strong>绘画:</strong> Ethan Alberts, Wiehan de Jager, Catherine Groenewald<br> <strong>翻译:</strong> Xingxing (Winny) Wang<br> <strong>语言:</strong> 中文<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/very-tall-man'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/fly'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
