--- a/stories/index.html
+++ b/stories/index.html
@@ -1319,6 +1319,13 @@
       <td><a name="no0073"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0087</td>
+      <td>Jeg liker å lese</td>
+      <td style="text-align: center"><a href="/stories/no/0087_jeg-liker-å-lese_slides.html" target="_blank">Slideshow</a> · <a href="/stories/no/0087_jeg-liker-å-lese.html">Plain HTML</a></td>
+      <td><a href="https://github.com/global-asp/global-asp/releases/download/v1.1/no.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="GitHub release" title="GitHub release" /></a> · <a href="https://www.dropbox.com/s/ona8gaetcci9m5f/no.zip"><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="Dropbox" title="Dropbox" /></a> · <a href="https://drive.google.com/open?id=0B59ZADK9EsbsVmtZTlhSZlhpQkU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Google Drive" /></a></td>
+      <td><a name="no0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0095</td>
       <td>Zama er flink!</td>
       <td style="text-align: center"><a href="/stories/no/0095_zama-er-flink_slides.html" target="_blank">Slideshow</a> · <a href="/stories/no/0095_zama-er-flink.html">Plain HTML</a></td>
@@ -2039,7 +2046,7 @@
       <td>0087</td>
       <td><a href="http://my.africanstorybook.org/stories/i-read">I like to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#es0087">es</a>, <a href="#hi0087">hi</a>, <a href="#sv0087">sv</a>, <a href="#zh0087">zh</a></td>
+      <td><a href="#es0087">es</a>, <a href="#hi0087">hi</a>, <a href="#no0087">no</a>, <a href="#sv0087">sv</a>, <a href="#zh0087">zh</a></td>
     </tr>
     <tr>
       <td>0093</td>
